Adding Otsuji model to analysis ipynb

--- a/Notebooks/Par_RD_PDE.ipynb
+++ b/Notebooks/Par_RD_PDE.ipynb
@@ -23,6 +23,7 @@
     "import pandas as pd\n",
     "import pickle\n",
     "from scipy import optimize\n",
+    "from scipy.interpolate import interp1d\n",
     "import sys\n",
     "import time\n",
     "# Profiling\n",
@@ -562,28 +563,29 @@
     "    plt.legend(frameon=False, loc=loc, labelspacing=0.1,\n",
     "               markerfirst=markerfirst, handlelength=handlelength)\n",
     "# Paper   \n",
-    "def make_graph_pretty(xlab, ylab, loc=0, markerfirst=True, handlelength=None):\n",
-    "    mpl.rcParams['lines.linewidth'] = 1\n",
-    "    mpl.rcParams['lines.markersize']=4\n",
-    "    color1 = 'black'#'darkorange'\n",
-    "    color2 = (0, 0, 0)\n",
-    "    color2 = (1, 1, 1)\n",
-    "    ax = plt.gca()\n",
-    "    ax.tick_params(axis='x', colors=color1, direction='in', which='both')\n",
-    "    ax.tick_params(axis='y', colors=color1, direction='in', which='both')\n",
-    "    plt.xlabel(xlab, color=color1)\n",
-    "    plt.ylabel(ylab, color=color1)\n",
-    "    ax.spines['left'].set_color(color1)\n",
-    "    ax.spines['bottom'].set_color(color1)\n",
-    "    # Hide the right and top spines\n",
-    "    ax.spines['right'].set_visible(False)\n",
-    "    ax.spines['top'].set_visible(False)\n",
-    "    ax.set_facecolor(color2)\n",
-    "    plt.gcf().subplots_adjust(bottom=0.29, left=0.27)\n",
-    "    plt.legend(frameon=False, loc=loc, labelspacing=0.1, fontsize=8,\n",
-    "               markerfirst=markerfirst, handlelength=handlelength)\n",
-    "    for tick in ax.get_xticklabels():\n",
-    "        tick.set_fontname(\"Arial\")\n",
+    "# def make_graph_pretty(xlab, ylab, loc=0, markerfirst=True, handlelength=None):\n",
+    "#     mpl.rcParams['lines.linewidth'] = 1\n",
+    "#     mpl.rcParams['lines.markersize']=4\n",
+    "#     color1 = 'black'#'darkorange'\n",
+    "#     color2 = (0, 0, 0)\n",
+    "#     color2 = (1, 1, 1)\n",
+    "#     ax = plt.gca()\n",
+    "#     ax.tick_params(axis='x', colors=color1, direction='in', which='both')\n",
+    "#     ax.tick_params(axis='y', colors=color1, direction='in', which='both')\n",
+    "#     plt.xlabel(xlab, color=color1)\n",
+    "#     plt.ylabel(ylab, color=color1)\n",
+    "#     ax.spines['left'].set_color(color1)\n",
+    "#     ax.spines['bottom'].set_color(color1)\n",
+    "#     # Hide the right and top spines\n",
+    "#     ax.spines['right'].set_visible(False)\n",
+    "#     ax.spines['top'].set_visible(False)\n",
+    "#     ax.set_facecolor(color2)\n",
+    "#     plt.gcf().subplots_adjust(bottom=0.29, left=0.27)\n",
+    "#     plt.legend(frameon=False, loc=loc, labelspacing=0.1, \n",
+    "size=8,\n",
+    "#                markerfirst=markerfirst, handlelength=handlelength)\n",
+    "#     for tick in ax.get_xticklabels():\n",
+    "#         tick.set_fontname(\"Arial\")\n",
     "        \n",
     "    \n",
     "with open('d_versus_sigma.pickle', 'rb') as f:\n",
@@ -905,6 +907,36 @@
     "\n",
     "plt.savefig('/Users/hubatsl/Dropbox (Lars DMS)/LRI/PAR_Size/Theory/Slope_Vs_koff_wavePin.pdf', transparent=True)\n",
     "plt.savefig('/Users/hubatsl/Desktop/interplay-cell-size/Theory/Slope_Vs_koff_wavePin.pdf', transparent=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Now for Otsuji model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ds = pd.read_csv('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/Ds.csv', index_col=False, header=None)\n",
+    "wp = pd.read_csv('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/size.csv', index_col=False, header=None)\n",
+    "def fit_sqrt(Ds, A):\n",
+    "    return A*np.sqrt(Ds)\n",
+    "popt, pcov = optimize.curve_fit(fit_sqrt, Ds.iloc[:,0], wp.iloc[:,0])\n",
+    "f_interp = interp1d(Ds.loc[:,0], wp.loc[:,0], kind='cubic')\n",
+    "x_new = np.linspace(Ds.iloc[0], Ds.iloc[-1], num=110, endpoint=True)\n",
+    "plt.figure(figsize=(3.75, 3.1))\n",
+    "\n",
+    "plt.plot(Ds, wp, 'o', markersize=7, label='Mass conserved \\nActivator Inhibitor', color=c1)\n",
+    "plt.plot(x_new, fit_sqrt(x_new, *popt), '--', lw=2, label='Square root fit', color=c2)\n",
+    "make_graph_pretty(r'$D\\;[\\mu m ^2/s]$', r'$CPSS\\; [\\mu m]$', loc=4)\n",
+    "\n",
+    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure2Supp/Diffusion_CPSS_Otsuji.pdf', transparent=True)\n",
     "plt.show()"
    ]
   },
@@ -1904,6 +1936,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Otsuji profiles for different Ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profs = pd.read_csv('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/ints_otsuji_off.csv', index_col=False, header=None)\n",
+    "# mpl.rcParams['font.family'] = 'serif'\n",
+    "# mpl.rcParams['font.serif'] = ['Palatino']\n",
+    "\n",
+    "plt.figure(figsize=(3.75, 3.1))\n",
+    "plt.plot(np.linspace(0, 10, 200), profs[0], label=r'0.1 $\\frac{\\mu m^2}{s}$', color = 'cornflowerblue',alpha=1, lw=2)\n",
+    "plt.plot(np.linspace(0, 10, 200), profs[1], label=r'0.9 $\\frac{\\mu m^2}{s}$', color = 'cornflowerblue',alpha=0.6, lw=2)\n",
+    "plt.plot(np.linspace(0, 10, 200), profs[2], label=r'3.6 $\\frac{\\mu m^2}{s}$', color = 'cornflowerblue',alpha=0.3, lw=2)\n",
+    "make_graph_pretty('x [$\\mu m$]','Concentration [a.u.]', loc=4)\n",
+    "# plt.title('Diffusion in Wave Pinning')\n",
+    "# plt.savefig('/Users/hubatsl/Desktop/interplay-cell-size/Theory/Diffusion_example_WP.pdf',\n",
+    "#             transparent=True)\n",
+    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure2Supp/Diffusion_ex_Otsuji.pdf',\n",
+    "            transparent=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Wave pinning for different off rates, all rates are scaled in order to keep patterning the same except for D."
    ]
   },
@@ -2194,6 +2256,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Movie for paper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
+    "             'kAP': 1, 'kPA': 1, 'koffA': 0.005, 'koffP': 0.005,\n",
+    "             'konA': 0.006, 'konP': 0.006, 'Ptot': 1, 'ratio': 0.98,\n",
+    "             'sys_size': 30}\n",
+    "n = 2\n",
+    "sizes = [7, 14]\n",
+    "siz = [copy.deepcopy(symmetric) for _ in sizes]\n",
+    "for i, dic in enumerate(siz):\n",
+    "    siz[i]['sys_size'] = sizes[i]\n",
+    "s1 = Sim_Container(siz, no_workers=8)\n",
+    "s1.init_simus()\n",
+    "s1.run_simus()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1.simus[0].save_movie(everynth=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1.simus[1].save_indiv_frames(everynth=1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2218,7 +2325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
