Phase space diagrams for WP, Otsuji, Goryachev Matlab/Python
WIP, not all models working as expected yet.

--- a/Notebooks/Da_Dp_dosage.ipynb
+++ b/Notebooks/Da_Dp_dosage.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook explores different dosage ratios for a system that's symmetric except for diffusion coefficients. I explore diffusion coefficients of $D_A = 0.1$/$D_P=1.1$ as well as $D_A = 0$/$D_P=1.1$. There is a quantitative difference, but qualitatively nothing changes."
+    "This notebook explores different dosage ratios for a system that's symmetric except for diffusion coefficients. I explore diffusion coefficients of $D_A = 0.1$/$D_P=1.1$ as well as $D_A = 0$/$D_P=1.1$. There is a quantitative difference, but qualitatively nothing changes.\n",
+    "### This is a heading"
    ]
   },
   {
@@ -1057,7 +1058,7 @@
     "ax.spines['right'].set_visible(False)\n",
     "ax.spines['top'].set_visible(False)\n",
     "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
-    "plt.savefig('/Users/lhcge/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage1.pdf', transparent=True)\n",
+    "# plt.savefig('/Users/lhcge/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage1.pdf', transparent=True)\n",
     "plt.show()"
    ]
   },
@@ -1078,6 +1079,135 @@
    "outputs": [],
    "source": [
     "dc.simus.simus[0].T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dosage for Wave Pinning (imported from Matlab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.loadtxt('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/' +\n",
+    "               'wave_pinning_matlab_sizeDosageTopBot.csv', delimiter=',');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b_x = b[:, 1]\n",
+    "b_bot = b[:, 0][b[:, -1].astype(int)]\n",
+    "b_top = b[:, 0][b[:, -2].astype(int)-1]\n",
+    "first_ind = np.min(np.where(np.diff(b_bot-b_top)>0))+1\n",
+    "plt.fill_between(b_x, 0, 2.5, alpha=0.6, color='salmon')\n",
+    "plt.fill_between(b_x[first_ind:], b_top[first_ind:], b_bot[first_ind:], alpha=1, color='grey')\n",
+    "\n",
+    "plt.ylim(0.5, 2)\n",
+    "ax = plt.gca()\n",
+    "ax.text(13, 1.7, 'Unpolarized', weight='bold')\n",
+    "ax.text(26, 1.1, 'Polarized', weight='bold')\n",
+    "plt.xlabel(r'system size [$\\mu m$]')\n",
+    "plt.ylabel(r'A/P ratio')\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
+    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_WP.pdf', transparent=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dosage for Goryachev (imported from Matlab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.loadtxt('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/' +\n",
+    "               'goryachev_matlab_sizeDosageTopBot.csv', delimiter=',');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b_x = b[:, 1]\n",
+    "b_bot = b[:, 0][b[:, -1].astype(int)]\n",
+    "b_top = b[:, 0][b[:, -2].astype(int)-1]\n",
+    "first_ind = np.min(np.where(np.diff(b_bot-b_top)>0))+1\n",
+    "plt.fill_between(b_x, 0, 100, alpha=0.6, color='salmon')\n",
+    "plt.fill_between(b_x[first_ind:], b_top[first_ind:], b_bot[first_ind:], alpha=1, color='grey')\n",
+    "\n",
+    "plt.ylim(0.0, 60)\n",
+    "ax = plt.gca()\n",
+    "ax.text(13, 50, 'Unpolarized', weight='bold')\n",
+    "ax.text(26, 18, 'Polarized', weight='bold')\n",
+    "plt.xlabel(r'system size [$\\mu m$]')\n",
+    "plt.ylabel(r'A/P ratio')\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
+    "# plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_GOR.pdf', transparent=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dosage for Otsuji (imported from Matlab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.loadtxt('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/' +\n",
+    "               'otsuji_matlab_sizeDosageTopBot.csv', delimiter=',');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b_x = b[:, 1]\n",
+    "b_bot = (b[:, 0][b[:, -1].astype(int)] + b[:, 0][b[:, -1].astype(int)-1])/2\n",
+    "b_top = (b[:, 0][b[:, -2].astype(int)-1] + b[:, 0][b[:, -2].astype(int)+1])/2\n",
+    "first_ind = np.min(np.where(np.diff(b_bot-b_top)>0))+1\n",
+    "plt.fill_between(b_x, 0, 100, alpha=0.6, color='salmon')\n",
+    "plt.fill_between(b_x[first_ind:], b_top[first_ind:], b_bot[first_ind:], alpha=1, color='grey')\n",
+    "\n",
+    "plt.ylim(0.0, 5)\n",
+    "ax = plt.gca()\n",
+    "ax.text(13, 3, 'Unpolarized', weight='bold')\n",
+    "ax.text(26, 2, 'Polarized', weight='bold')\n",
+    "plt.xlabel(r'system size [$\\mu m$]')\n",
+    "plt.ylabel(r'A/P ratio')\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
+    "# plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_GOR.pdf', transparent=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -1104,7 +1234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
