Adding bisection algorithm

--- a/Notebooks/Da_Dp_dosage.ipynb
+++ b/Notebooks/Da_Dp_dosage.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook explores different dosage ratios for a system that's symmetric except for diffusion coefficients. I explore diffusion coefficients of $D_A = 0.1$/$D_P=1.1$ as well as $D_A = 0$/$D_P=1.1$. There is a quantitative difference, but qualitatively nothing changes.\n",
-    "### This is a heading"
+    "This notebook explores different dosage ratios for a system that's symmetric except for diffusion coefficients. I explore diffusion coefficients of $D_A = 0.1$/$D_P=1.1$ as well as $D_A = 0$/$D_P=1.1$. There is a quantitative difference, but qualitatively nothing changes.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
