--- a/Notebooks/Par_RD_PDE.ipynb
+++ b/Notebooks/Par_RD_PDE.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 515,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,6 +2298,112 @@
    "outputs": [],
    "source": [
     "s1.simus[1].save_indiv_frames(everynth=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A->M, p->c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python Wave Pinning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratio_above = 1.4\n",
+    "ratio_below = 0.9\n",
+    "ratio = 1.1\n",
+    "difference = 1\n",
+    "while difference > 0.01:\n",
+    "    s = ParSim(mechanism='WP', T=500, param_dict={'ratio': ratio,'sys_size': 134.6/2})\n",
+    "    s.simulate()\n",
+    "    if (np.max(s.A[:, -1])-np.min(s.A[:, -1]))/np.max(s.A[:-1]) > 0.1: # System polarized\n",
+    "        ratio_below = ratio\n",
+    "        ratio = (ratio_above - ratio)/2 + ratio\n",
+    "    else:\n",
+    "        ratio_above = ratio\n",
+    "        ratio = ratio - (ratio-ratio_below)/2\n",
+    "    difference = abs(ratio_old - ratio)\n",
+    "    print(ratio)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 513,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Pool\n",
+    "from ParDetAsymm import ParSim, sim_indiv\n",
+    "sizes = np.linspace(20, 40, 8)\n",
+    "\n",
+    "def find_outline(location, ratio, ratio_above, ratio_below, sizes, T, thresh):\n",
+    "    difference = np.ones(len(sizes))\n",
+    "#     while (difference > thresh).all():\n",
+    "    simList = [ParSim(mechanism='WP', T=T, param_dict={'ratio': ratio,'sys_size': s}) for s in sizes]\n",
+    "    for sim in simList:\n",
+    "        sim.set_init_profile_wave_pin()\n",
+    "    pool = Pool(processes=8)\n",
+    "    res = pool.map(sim_indiv, simList)\n",
+    "    pool.close()\n",
+    "    pool.join()\n",
+    "#         ratio_old = ratio\n",
+    "#         for i, s in enumerate(res):\n",
+    "#             if (location is 'above') & (np.max(s.A[:, -1])-np.min(s.A[:, -1]))/np.max(s.A[:-1] > 0.1):\n",
+    "#                 ratio_below[i] = ratio[i]\n",
+    "#                 ratio[i] = (ratio_above[i] - ratio[i])/2 + ratio[i]\n",
+    "#             elif location is 'above':\n",
+    "#                 ratio_above[i] = ratio[i]\n",
+    "#                 ratio[i] = ratio[i] - (ratio[i]-ratio_below[i])/2\n",
+    "#             elif (location is 'below') & (np.max(s.A[:, -1])-np.min(s.A[:, -1]))/np.max(s.A[:-1] > 0.1):\n",
+    "#                 ratio_above[i] = ratio[i]\n",
+    "#                 ratio[i] = ratio[i] - (ratio[i]-ratio_below[i])/2\n",
+    "#             elif location is 'below':\n",
+    "#                 ratio_below[i] = ratio[i]\n",
+    "#                 ratio[i] = (ratio_above[i] - ratio[i])/2 + ratio[i]\n",
+    "#             difference[i] = abs(ratio_old[i] - ratio[i])\n",
+    "#         print(ratio)\n",
+    "#     return ratio_above, ratio_below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 458,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = ParSim(mechanism='WP', T=500, param_dict={'ratio': 1.1375,'sys_size': 134.6/2})\n",
+    "s.simulate()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 6\n",
+    "plt.plot(s.A[:, :])\n",
+    "# plt.plot(s.P[:, i])\n",
+    "plt.legend(['A'])\n",
+    "print(s.total-sum(s.A[:, -1]))\n",
+    "# plt.figure()\n",
+    "# plt.plot(s.P[:, :5])\n",
+    "# # plt.plot(s.P[:, i])\n",
+    "# plt.legend(['P'])"
    ]
   },
   {
