Python WP comparable to Matlab for Dc = inf and Dc = 1

--- a/Notebooks/Par_RD_PDE.ipynb
+++ b/Notebooks/Par_RD_PDE.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2327,8 +2327,9 @@
     "ratio = 1.1\n",
     "difference = 1\n",
     "while difference > 0.01:\n",
-    "    s = ParSim(mechanism='WP', T=500, param_dict={'ratio': ratio,'sys_size': 134.6/2})\n",
+    "    s = ParSim(mechanism=2, T=500, param_dict={'ratio': ratio,'sys_size': 134.6/2})\n",
     "    s.simulate()\n",
+    "    ratio_old = ratio\n",
     "    if (np.max(s.A[:, -1])-np.min(s.A[:, -1]))/np.max(s.A[:-1]) > 0.1: # System polarized\n",
     "        ratio_below = ratio\n",
     "        ratio = (ratio_above - ratio)/2 + ratio\n",
@@ -2342,51 +2343,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from multiprocessing import Pool\n",
     "from ParDetAsymm import ParSim, sim_indiv\n",
-    "sizes = np.linspace(20, 40, 8)\n",
+    "sizes = np.linspace(4.9, 40, 24)\n",
     "\n",
     "def find_outline(location, ratio, ratio_above, ratio_below, sizes, T, thresh):\n",
     "    difference = np.ones(len(sizes))\n",
-    "#     while (difference > thresh).all():\n",
-    "    simList = [ParSim(mechanism='WP', T=T, param_dict={'ratio': ratio,'sys_size': s}) for s in sizes]\n",
-    "    for sim in simList:\n",
-    "        sim.set_init_profile_wave_pin()\n",
-    "    pool = Pool(processes=8)\n",
-    "    res = pool.map(sim_indiv, simList)\n",
-    "    pool.close()\n",
-    "    pool.join()\n",
-    "#         ratio_old = ratio\n",
-    "#         for i, s in enumerate(res):\n",
-    "#             if (location is 'above') & (np.max(s.A[:, -1])-np.min(s.A[:, -1]))/np.max(s.A[:-1] > 0.1):\n",
-    "#                 ratio_below[i] = ratio[i]\n",
-    "#                 ratio[i] = (ratio_above[i] - ratio[i])/2 + ratio[i]\n",
-    "#             elif location is 'above':\n",
-    "#                 ratio_above[i] = ratio[i]\n",
-    "#                 ratio[i] = ratio[i] - (ratio[i]-ratio_below[i])/2\n",
-    "#             elif (location is 'below') & (np.max(s.A[:, -1])-np.min(s.A[:, -1]))/np.max(s.A[:-1] > 0.1):\n",
-    "#                 ratio_above[i] = ratio[i]\n",
-    "#                 ratio[i] = ratio[i] - (ratio[i]-ratio_below[i])/2\n",
-    "#             elif location is 'below':\n",
-    "#                 ratio_below[i] = ratio[i]\n",
-    "#                 ratio[i] = (ratio_above[i] - ratio[i])/2 + ratio[i]\n",
-    "#             difference[i] = abs(ratio_old[i] - ratio[i])\n",
-    "#         print(ratio)\n",
-    "#     return ratio_above, ratio_below"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 458,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = ParSim(mechanism='WP', T=500, param_dict={'ratio': 1.1375,'sys_size': 134.6/2})\n",
-    "s.simulate()\n"
+    "    while (difference > thresh).all():\n",
+    "        simList = [ParSim(mechanism=2, T=T, param_dict={'ratio': ratio[i],'sys_size': s})\n",
+    "                   for i, s in enumerate(sizes)]\n",
+    "        pool = Pool(processes=8)\n",
+    "        res = pool.map(sim_indiv, simList)\n",
+    "        pool.close()\n",
+    "        pool.join()\n",
+    "#         return res\n",
+    "        ratio_old = copy.deepcopy(ratio)\n",
+    "        for i, s in enumerate(res):\n",
+    "            if (location is 'above') & (s.finished_in_time==2):\n",
+    "                ratio_below[i] = ratio[i]\n",
+    "                ratio[i] = (ratio_above[i] - ratio[i])/2 + ratio[i]\n",
+    "            elif location is 'above':\n",
+    "                ratio_above[i] = ratio[i]\n",
+    "                ratio[i] = ratio[i] - (ratio[i]-ratio_below[i])/2\n",
+    "            elif (location is 'below') & (s.finished_in_time==2):\n",
+    "                ratio_above[i] = ratio[i]\n",
+    "                ratio[i] = ratio[i] - (ratio[i]-ratio_below[i])/2\n",
+    "            elif location is 'below':\n",
+    "                ratio_below[i] = ratio[i]\n",
+    "                ratio[i] = (ratio_above[i] - ratio[i])/2 + ratio[i]\n",
+    "            difference[i] = abs(ratio_old[i] - ratio[i])\n",
+    "        print(difference)\n",
+    "        print(ratio)\n",
+    "    return ratio_above, ratio_below"
    ]
   },
   {
@@ -2404,6 +2396,184 @@
     "# plt.plot(s.P[:, :5])\n",
     "# # plt.plot(s.P[:, i])\n",
     "# plt.legend(['P'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = time.time()\n",
+    "res = find_outline('below', np.ones(8)*0.8, np.ones(8)*1.1, np.ones(8)*0.5, sizes, 50, 0.02)\n",
+    "print(time.time()-t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = time.time()\n",
+    "res = find_outline('above',\n",
+    "                   np.ones(24)*1.1,\n",
+    "                   np.ones(24)*2,\n",
+    "                   [0.89375, 0.85625, 0.85625, 0.85625, 0.85625, 0.85625, 0.85625, 0.85625, 0.89375, 0.85625, 0.85625, 0.85625, 0.85625, 0.85625, 0.85625, 0.85625, 0.89375, 0.85625, 0.85625, 0.85625, 0.85625, 0.85625, 0.85625, 0.85625],\n",
+    "                   sizes, 50, 0.02)\n",
+    "print(time.time()-t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r in res:\n",
+    "#     plt.figure()\n",
+    "    plt.plot(r.A[:, -1])\n",
+    "    plt.legend('WP')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r in res:\n",
+    "#     plt.figure()\n",
+    "    plt.plot(r.A[:, -1])\n",
+    "    plt.legend('WP')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check Matlab vs Python (using similar parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = ParSim(mechanism=2, T=1000, param_dict={'ratio': 0.95,'sys_size': 10})\n",
+    "t.simulate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.plot_steady_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = ParSim(mechanism=2, T=1000, param_dict={'ratio': 1.05,'sys_size': 10})\n",
+    "t.simulate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.plot_steady_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.A[:, -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t08 = ParSim(mechanism=2, T=1000, param_dict={'ratio': 0.8,'sys_size': 10})\n",
+    "t08.simulate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t08.plot_steady_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t08.A[:, -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_c = ParSim(mechanism=2, T=1000, param_dict={'ratio': 1.05,'sys_size': 10})\n",
+    "t_c.simulate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_c.plot_steady_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(t_c.P[:, 20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_c.plot_steady_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(t_c.P[:, 20])"
    ]
   },
   {
