Introducing OT and WP plots in python

--- a/Notebooks/Da_Dp_dosage.ipynb
+++ b/Notebooks/Da_Dp_dosage.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,6 +1081,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Redo for t = 10000\n",
+    "from ParDetAsymm import Dosage_CPSS\n",
+    "# Da = 0.1, Dp = 0.1\n",
+    "prec = 8\n",
+    "for da in np.linspace(0, 0, 1):\n",
+    "    print(da) \n",
+    "    sz = [15, 60]\n",
+    "    base_set = {'alpha': 2, 'beta': 2, 'dA': 0.0, 'dP': 0.1,\n",
+    "             'kAP': 1, 'kPA': 1, 'koffA': 0.005, 'koffP': 0.005,\n",
+    "             'konA': 0.006, 'konP': 0.006, 'Ptot': 1, 'ratio': 1.0,\n",
+    "             'sys_size': 30}\n",
+    "    base_set['dA'] = da\n",
+    "    dc = Dosage_CPSS(5, 0.05, prec, sz, base_set=base_set, max_iter=16)\n",
+    "    dc.simulate(dom='P')\n",
+    "    dc.simulate(dom='A')\n",
+    "    plt.plot(np.linspace(sz[0], sz[1], prec), dc.ratioP)\n",
+    "    plt.plot(np.linspace(sz[0], sz[1], prec), dc.ratioA)\n",
+    "    plt.show()\n",
+    "    dc.pickle_data('2407_Dp01_Da' + str(da))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1093,8 +1120,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "t = np.loadtxt('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/' +\n",
+    "               'WP_matlab_sizeDosageTop_10000.csv', delimiter=',');\n",
     "b = np.loadtxt('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/' +\n",
-    "               'wave_pinning_matlab_sizeDosageTopBot.csv', delimiter=',');"
+    "               'WP_matlab_sizeDosageBot_10000.csv', delimiter=',');"
    ]
   },
   {
@@ -1103,22 +1132,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b_x = b[:, 1]\n",
-    "b_bot = b[:, 0][b[:, -1].astype(int)]\n",
-    "b_top = b[:, 0][b[:, -2].astype(int)-1]\n",
-    "first_ind = np.min(np.where(np.diff(b_bot-b_top)>0))+1\n",
-    "plt.fill_between(b_x, 0, 2.5, alpha=0.6, color='salmon')\n",
-    "plt.fill_between(b_x[first_ind:], b_top[first_ind:], b_bot[first_ind:], alpha=1, color='grey')\n",
-    "\n",
-    "plt.ylim(0.5, 2)\n",
+    "plt.fill_between([4, 20], 0, 40, alpha=0.6, color='salmon')\n",
+    "plt.fill_between(t[:, 0], t[:, 1], np.interp(t[:, 0], np.flip(b[:, 0]), np.flip(b[:, 1])), alpha=1, color='grey')\n",
+    "plt.rcParams.update({'font.size': 14})\n",
+    "plt.ylim(0.9, 1.3)\n",
+    "plt.xlim(4, 20)\n",
     "ax = plt.gca()\n",
-    "ax.text(13, 1.7, 'Unpolarized', weight='bold')\n",
-    "ax.text(26, 1.1, 'Polarized', weight='bold')\n",
-    "plt.xlabel(r'system size [$\\mu m$]')\n",
-    "plt.ylabel(r'A/P ratio')\n",
+    "ax.text(6, 1.25, 'Unpolarized')\n",
+    "ax.text(12, 1.05, 'Polarized')\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.spines['top'].set_visible(False)\n",
     "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
+    "make_graph_pretty(r'system size [$\\mu m$]', r'A/P ratio')\n",
     "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_WP.pdf', transparent=True)\n",
     "plt.show()"
    ]
@@ -1179,8 +1204,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "t = np.loadtxt('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/' +\n",
+    "               'otsuji_matlab_sizeDosageTop_10000.csv', delimiter=',');\n",
     "b = np.loadtxt('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/' +\n",
-    "               'otsuji_matlab_sizeDosageTopBot.csv', delimiter=',');"
+    "               'otsuji_matlab_sizeDosageBot_10000.csv', delimiter=',');"
    ]
   },
   {
@@ -1189,32 +1216,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b_x = b[:, 1]\n",
-    "b_bot = (b[:, 0][b[:, -1].astype(int)] + b[:, 0][b[:, -1].astype(int)-1])/2\n",
-    "b_top = (b[:, 0][b[:, -2].astype(int)-1] + b[:, 0][b[:, -2].astype(int)+1])/2\n",
-    "first_ind = np.min(np.where(np.diff(b_bot-b_top)>0))+1\n",
-    "plt.fill_between(b_x, 0, 100, alpha=0.6, color='salmon')\n",
-    "plt.fill_between(b_x[first_ind:], b_top[first_ind:], b_bot[first_ind:], alpha=1, color='grey')\n",
-    "\n",
-    "plt.ylim(0.0, 5)\n",
+    "plt.fill_between([4, 20], 0, 40, alpha=0.6, color='salmon')\n",
+    "plt.fill_between(t[:, 0], t[:, 1], np.interp(t[:, 0], np.flip(b[:, 0]), np.flip(b[:, 1])), alpha=1, color='grey')\n",
+    "plt.rcParams.update({'font.size': 14})\n",
+    "plt.ylim(0.0, 20)\n",
+    "plt.xlim(4, 20)\n",
     "ax = plt.gca()\n",
-    "ax.text(13, 3, 'Unpolarized', weight='bold')\n",
-    "ax.text(26, 2, 'Polarized', weight='bold')\n",
-    "plt.xlabel(r'system size [$\\mu m$]')\n",
-    "plt.ylabel(r'A/P ratio')\n",
+    "ax.text(14, 5, 'Polarized')\n",
+    "ax.text(6.5, 15, 'Unpolarized')\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.spines['top'].set_visible(False)\n",
     "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
-    "# plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_GOR.pdf', transparent=True)\n",
+    "make_graph_pretty(r'system size [$\\mu m$]', r'A/P ratio')\n",
+    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_OT.pdf', transparent=True)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
