--- a/Notebooks/Da_Dp_dosage.ipynb
+++ b/Notebooks/Da_Dp_dosage.ipynb
@@ -1088,23 +1088,60 @@
    "source": [
     "# Redo for t = 10000\n",
     "from ParDetAsymm import Dosage_CPSS\n",
-    "# Da = 0.1, Dp = 0.1\n",
-    "prec = 8\n",
-    "for da in np.linspace(0, 0, 1):\n",
-    "    print(da) \n",
-    "    sz = [15, 60]\n",
-    "    base_set = {'alpha': 2, 'beta': 2, 'dA': 0.0, 'dP': 0.1,\n",
-    "             'kAP': 1, 'kPA': 1, 'koffA': 0.005, 'koffP': 0.005,\n",
-    "             'konA': 0.006, 'konP': 0.006, 'Ptot': 1, 'ratio': 1.0,\n",
-    "             'sys_size': 30}\n",
-    "    base_set['dA'] = da\n",
-    "    dc = Dosage_CPSS(5, 0.05, prec, sz, base_set=base_set, max_iter=16)\n",
-    "    dc.simulate(dom='P')\n",
-    "    dc.simulate(dom='A')\n",
-    "    plt.plot(np.linspace(sz[0], sz[1], prec), dc.ratioP)\n",
-    "    plt.plot(np.linspace(sz[0], sz[1], prec), dc.ratioA)\n",
-    "    plt.show()\n",
-    "    dc.pickle_data('2407_Dp01_Da' + str(da))"
+    "base_set = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
+    "         'kAP': 1, 'kPA': 1, 'koffA': 0.005, 'koffP': 0.005,\n",
+    "         'konA': 0.006, 'konP': 0.006, 'Ptot': 1, 'ratio': 1.0,\n",
+    "         'sys_size': 30}\n",
+    "sz = [4, 22]\n",
+    "dc = Dosage_CPSS(1.2, 0.8, 16, sz, base_set=base_set, max_iter=16)\n",
+    "dc.simulate(dom='P')\n",
+    "dc.simulate(dom='A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prec = 16\n",
+    "plt.plot(np.linspace(sz[0], sz[1], prec), dc.ratioP)\n",
+    "plt.plot(np.linspace(sz[0], sz[1], prec), dc.ratioA)\n",
+    "plt.show()\n",
+    "dc.pickle_data('0312_Dp01_Da01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig=plt.figure(figsize=(3.75, 3.1), dpi= 300, facecolor='w')\n",
+    "with open('0312_Dp01_Da01.pickle', 'rb') as f:\n",
+    "    dc = pickle.load(f)\n",
+    "\n",
+    "top = dc.ratioA\n",
+    "bot = dc.ratioP\n",
+    "both_x = np.linspace(dc.sz_range[0], dc.sz_range[1], dc.precision)\n",
+    "\n",
+    "plt.fill_between(both_x, top, bot, alpha=1, color='grey')\n",
+    "plt.fill_between(both_x, bot, 0, alpha=0.6, color='cornflowerblue')\n",
+    "plt.fill_between(both_x, top, 1.5, alpha=0.6, color='salmon')\n",
+    "\n",
+    "plt.ylim(0.8, 1.25)\n",
+    "plt.xlim(both_x[0], both_x[-1])\n",
+    "ax = plt.gca()\n",
+    "ax.text(5, 1.15, 'Unpolarized (A wins)')\n",
+    "ax.text(13.5, 0.99, 'Polarized', weight='bold')\n",
+    "ax.text(5, 0.85, 'Unpolarized (P wins)')\n",
+    "plt.xlabel(r'system size [$\\mu m$]')\n",
+    "plt.ylabel(r'A/P ratio')\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
+    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_symm_10000s.pdf', transparent=True)\n",
+    "plt.show()"
    ]
   },
   {
