Just submitted revisions to NP
ParDetAsymm: changes to plotting
Profiles_OT_WP_GOR.m: for plotting profiles (also in previous versions of manuscript)
ActivInhib: Introducing various graphs, most notably rates vs lambda
Da_Dp_dosage: Changes to plots
Par_RD_PDE: Introducing plots with imported data from Matlab for OT, GOR, WP; Changing off rates, changing all reaction rates, some other plotting changes

--- a/Notebooks/Da_Dp_dosage.ipynb
+++ b/Notebooks/Da_Dp_dosage.ipynb
@@ -1117,14 +1117,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig=plt.figure(figsize=(3.75, 3.1), dpi= 300, facecolor='w')\n",
+    "# fig=plt.figure(figsize=(3.75, 3.1), dpi= 300, facecolor='w')\n",
+    "fig=plt.figure(figsize=(4, 4), dpi= 80, facecolor='w', edgecolor='k')\n",
     "with open('0312_Dp01_Da01.pickle', 'rb') as f:\n",
     "    dc = pickle.load(f)\n",
     "\n",
     "top = dc.ratioA\n",
     "bot = dc.ratioP\n",
     "both_x = np.linspace(dc.sz_range[0], dc.sz_range[1], dc.precision)\n",
-    "\n",
+    "plt.rcParams.update({'font.size': 16})\n",
     "plt.fill_between(both_x, top, bot, alpha=1, color='grey')\n",
     "plt.fill_between(both_x, bot, 0, alpha=0.6, color='cornflowerblue')\n",
     "plt.fill_between(both_x, top, 1.5, alpha=0.6, color='salmon')\n",
@@ -1132,15 +1133,14 @@
     "plt.ylim(0.8, 1.25)\n",
     "plt.xlim(both_x[0], both_x[-1])\n",
     "ax = plt.gca()\n",
-    "ax.text(5, 1.15, 'Unpolarized (A wins)')\n",
-    "ax.text(13.5, 0.99, 'Polarized', weight='bold')\n",
-    "ax.text(5, 0.85, 'Unpolarized (P wins)')\n",
+    "# ax.text(5, 1.15, 'Unpolarized (A wins)')\n",
+    "# ax.text(13.5, 0.99, 'Polarized', weight='bold')\n",
+    "# ax.text(5, 0.85, 'Unpolarized (P wins)')\n",
     "plt.xlabel(r'system size [$\\mu m$]')\n",
     "plt.ylabel(r'A/P ratio')\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.spines['top'].set_visible(False)\n",
-    "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
-    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_symm_10000s.pdf', transparent=True)\n",
+    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_symm_10000s.pdf', transparent=True, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1169,19 +1169,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig=plt.figure(figsize=(4, 4), dpi= 80, facecolor='w', edgecolor='k')\n",
     "plt.fill_between([4, 20], 0, 40, alpha=0.6, color='salmon')\n",
     "plt.fill_between(t[:, 0], t[:, 1], np.interp(t[:, 0], np.flip(b[:, 0]), np.flip(b[:, 1])), alpha=1, color='grey')\n",
-    "plt.rcParams.update({'font.size': 14})\n",
-    "plt.ylim(0.9, 1.3)\n",
+    "plt.rcParams.update({'font.size': 16})\n",
+    "plt.ylim(0.9, 1.25)\n",
     "plt.xlim(4, 20)\n",
     "ax = plt.gca()\n",
-    "ax.text(6, 1.25, 'Unpolarized')\n",
-    "ax.text(12, 1.05, 'Polarized')\n",
+    "plt.yticks([0.9, 1.0, 1.1, 1.2])\n",
+    "# ax.text(6, 1.25, 'Unpolarized')\n",
+    "# ax.text(12, 1.05, 'Polarized')\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.spines['top'].set_visible(False)\n",
-    "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
-    "make_graph_pretty(r'system size [$\\mu m$]', r'A/P ratio')\n",
-    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_WP.pdf', transparent=True)\n",
+    "make_graph_pretty(r'system size [$\\mu m$]', r'A$_{tot}$ [a.u.]')\n",
+    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_WP.pdf', transparent=True, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1199,7 +1200,7 @@
    "outputs": [],
    "source": [
     "b = np.loadtxt('/Users/hubatsch/Desktop/PARmodelling/MatlabDet/ActivatorInhibitor/' +\n",
-    "               'goryachev_matlab_sizeDosageTopBot.csv', delimiter=',');"
+    "               'GOR_matlab_sizeDosageBot_10000.csv', delimiter=',');"
    ]
   },
   {
@@ -1208,23 +1209,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b_x = b[:, 1]\n",
-    "b_bot = b[:, 0][b[:, -1].astype(int)]\n",
-    "b_top = b[:, 0][b[:, -2].astype(int)-1]\n",
-    "first_ind = np.min(np.where(np.diff(b_bot-b_top)>0))+1\n",
-    "plt.fill_between(b_x, 0, 100, alpha=0.6, color='salmon')\n",
-    "plt.fill_between(b_x[first_ind:], b_top[first_ind:], b_bot[first_ind:], alpha=1, color='grey')\n",
-    "\n",
-    "plt.ylim(0.0, 60)\n",
+    "fig=plt.figure(figsize=(4, 4), dpi= 80, facecolor='w', edgecolor='k')\n",
+    "plt.fill_between([4, 20], 0, 10, alpha=0.6, color='salmon')\n",
+    "plt.fill_between(b[:, 0], b[:, 1], 10, alpha=1, color='grey')\n",
+    "plt.ylim(0.0, 10)\n",
+    "plt.xlim(4, 20)\n",
+    "plt.rcParams.update({'font.size': 16})\n",
     "ax = plt.gca()\n",
-    "ax.text(13, 50, 'Unpolarized', weight='bold')\n",
-    "ax.text(26, 18, 'Polarized', weight='bold')\n",
-    "plt.xlabel(r'system size [$\\mu m$]')\n",
-    "plt.ylabel(r'A/P ratio')\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.spines['top'].set_visible(False)\n",
     "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
-    "# plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_GOR.pdf', transparent=True)\n",
+    "make_graph_pretty(r'system size [$\\mu m$]', r'A$_{tot}$ [a.u.]')\n",
+    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_GOR.pdf', transparent=True, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1253,21 +1249,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig=plt.figure(figsize=(4, 4), dpi= 80, facecolor='w', edgecolor='k')\n",
     "plt.fill_between([4, 20], 0, 40, alpha=0.6, color='salmon')\n",
     "plt.fill_between(t[:, 0], t[:, 1], np.interp(t[:, 0], np.flip(b[:, 0]), np.flip(b[:, 1])), alpha=1, color='grey')\n",
-    "plt.rcParams.update({'font.size': 14})\n",
+    "plt.rcParams.update({'font.size': 16})\n",
     "plt.ylim(0.0, 20)\n",
     "plt.xlim(4, 20)\n",
     "ax = plt.gca()\n",
-    "ax.text(14, 5, 'Polarized')\n",
-    "ax.text(6.5, 15, 'Unpolarized')\n",
+    "# ax.text(14, 5, 'Polarized')\n",
+    "# ax.text(6.5, 15, 'Unpolarized')\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.spines['top'].set_visible(False)\n",
-    "plt.gcf().subplots_adjust(bottom=0.17, left=0.15)\n",
-    "make_graph_pretty(r'system size [$\\mu m$]', r'A/P ratio')\n",
-    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_OT.pdf', transparent=True)\n",
+    "make_graph_pretty(r'system size [$\\mu m$]', r'A$_{tot}$ [a.u.]')\n",
+    "plt.savefig('/Users/hubatsch/Dropbox (Lars DMS)/LRI/PAR_Size/PAR_Size_MS_Data/Data_Figure3_Theory2/Da_Dp_dosage_OT.pdf', transparent=True, bbox_inches='tight')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1286,7 +1289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
